--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-addons-perf": "^15.4.2",
     "react-dom": "^15.6.1",
     "react-intl": "^2.3.0",
+    "react-messenger-plugin": "^1.0.3",
     "react-responsive": "^1.3.4",
     "react-tap-event-plugin": "^2.0.1",
     "scrollme": "^0.1.1"
